# fast_logger

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
test/: CMakeLists.txt  test.cpp
